# pollequiz

./: .gitignore  Makefile  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci_actions.yml
pollequiz/: asgi.py  pq_objects.py  settings.py  text_constants.py  urls.py  views.py  wsgi.py
pollequiz/api/: apps.py  serializers.py  urls.py  views.py
pollequiz/fixtures/: answer.json  question.json  quiz.json  users.json
pollequiz/quiz/: admin.py  apps.py  filter.py  forms.py  models.py  tests.py  tests_answers.py  tests_questions.py  tests_quiz.py  urls.py  views.py
pollequiz/quiz/migrations/: 0001_initial.py  0002_alter_quiz_description_alter_quiz_name.py  0003_question.py  0004_question_points_answer.py  0005_alter_answer_a_number_alter_answer_correct_and_more.py
pollequiz/quiz/templates/quiz/: delete.html  list.html  quiz_answers.html  quiz_card.html  quiz_form.html  quiz_questions.html
pollequiz/quiz/views/: __init__.py  answer.py  question.py  quiz.py
pollequiz/run/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
pollequiz/run/migrations/: 0001_initial.py
pollequiz/run/templates/run/: question.html  quiz_list.html  results.html  take_detail.html  takes_list.html
pollequiz/run/views/: auth_views.py  views.py
pollequiz/templates/: base.html  form.html  help.html  index.html  login.html  navbar.html
pollequiz/users/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
pollequiz/users/migrations/: 0001_initial.py
